<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:background="@color/black"
        android:contentDescription="@string/shuffle_button"
        android:src="@drawable/baseline_shuffle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.087" />

    <ImageButton
        android:id="@+id/arrow_down_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="19dp"
        android:background="@color/black"
        android:contentDescription="@string/arrow_menu"
        android:onClick="stopMusic"
        android:src="@drawable/baseline_keyboard_arrow_down_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/open_maps_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@color/black"
        android:contentDescription="@string/menu_button"
        android:src="@drawable/baseline_menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/albumArtImageView"
        android:layout_width="292dp"
        android:layout_height="301dp"
        android:layout_marginTop="115dp"
        android:contentDescription="@string/album_art_description"
        android:scaleType="fitXY"
        android:src="@drawable/night_tempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songInfoTextView"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-336dp"
        android:gravity="center"
        android:text="Night Tempo - Arashi no Sugao"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumArtImageView" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="288dp"
        android:layout_height="33dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="49dp"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:indeterminateTint="#FFFFFF"
        android:max="100"
        android:progress="25"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FFFFFF"
        android:secondaryProgressTint="#FFFFFF"
        android:thumbTint="#FFFFFF"
        android:tickMarkTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songInfoTextView" />

    <ImageButton
        android:id="@+id/voiceRecognitionButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mic_btn"
        android:contentDescription="@string/mic_button"
        android:src="@drawable/baseline_mic_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Add these TextView elements below your SeekBar in your XML layout -->

    <TextView
        android:id="@+id/timePassedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <TextView
        android:id="@+id/totalLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <ImageView
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:src="@drawable/baseline_circle_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <ImageView
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:src="@drawable/baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

</androidx.constraintlayout.widget.ConstraintLayout>